--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+# .gitignore
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+
 # dependencies
 /node_modules
